Fix sound wave on mobile

--- a/src/components/wave/wave.scss
+++ b/src/components/wave/wave.scss
@@ -31,6 +31,10 @@
     font-weight: 400;
     color: $K500;
   }
+
+  .wave-canvas {
+    max-width: 100%;
+  }
 }
 
 // Wave mod slider
